# intermodel

./: LICENSE  Pipfile  README.md  pyproject.toml
doc/: todo.md
intermodel/: __init__.py  callgpt.py  callgpt_faker.py  hf_auth_token.py  hf_token.py  test_format_messages.py  test_model_string.py
