[project]
name = "intermodel"
version = "0.0.43"
dependencies = [
    "openai==0.28",
    "httpx",
    "banana-dev",
    "anthropic",
    "tiktoken",
    "python-dotenv"
    "replicate",
    "asgiref",
    "tenacity",
    "tokenizers"
]

[tool.poetry]
name = "intermodel"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
black = "*"
