[project]
name = "intermodel"
version = "0.0.57"
dependencies = [
    "openai==0.28",
    "httpx",
    "anthropic",
    "tiktoken",
    "python-dotenv",
    "replicate",
    "asgiref",
    "tenacity",
    "tokenizers",
    "pytest>=8.3.3",
]

[tool.poetry]
name = "intermodel"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
black = "*"
