[project]
name = "intermodel"
version = "0.0.67"
dependencies = [
    "httpx",
    "anthropic",
    "tiktoken",
    "python-dotenv",
    "replicate",
    "asgiref",
    "tenacity",
    "tokenizers",
    "pytest>=8.3.3",
    "aiohttp>=3.10.10",
]

[tool.poetry]
name = "intermodel"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
black = "*"

[tool.rye]
dev-dependencies = [
    "pytest>=8.3.3",
]
